# holy-hack-2024-ai-workshop

./: .gitignore  Home.py  LICENSE  README.md  pyproject.toml  requirements.txt
complete/: Home.py  app.py
complete/.streamlit/: pages.toml
complete/notebooks/: Untitled.ipynb  test_semantic_router.ipynb
complete/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
complete/pages/: RAG.py  Upload_Data.py  page_upload.py
complete/services/: __init__.py  chat.py  chunker.py  speech2text.py  vectordb.py
notebooks/: test_vectordb.ipynb
notebooks/.ipynb_checkpoints/: chunk_podcast-checkpoint.ipynb
pages/: RAG.py  Upload_Data.py
services/: __init__.py  chat.py  chunker.py  speech2text.py  vectordb.py
